--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ body {
 
 .container {
   max-width: 1400px;
-  height: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -37,7 +36,8 @@ body {
   min-height: 100vh;
   background-position: center;
   background-size: cover;
-  background-image: url("../../img/header-img-darken.png");
+  background-image: url("../../img/excavator.jpg");
+  padding-bottom: 10px;
 }
 
 .nav {
@@ -194,14 +194,83 @@ body {
   color: white;
 }
 
+.header-content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 8fr 4fr;
+  grid-template-columns: 8fr 4fr;
+}
+.header-content .swiper {
+  margin-top: auto;
+  width: 100%;
+}
+.header-content .swiper .swiper-wrapper {
+  height: 250px;
+}
+.header-content .swiper .swiper-wrapper .swiper-slide {
+  width: 100%;
+}
+.header-content .swiper .swiper-wrapper .swiper-slide .slide-content {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../img/excavator-african.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.header-content .swiper .swiper-wrapper .swiper-slide .slide-content.slide-content-2 {
+  background-image: url("../../img/worker.jpg");
+}
+.header-content .swiper .swiper-wrapper .swiper-slide .slide-content.slide-content-3 {
+  background-image: url("../../img/excavator.jpg");
+}
+.header-content .swiper .swiper-btn-wrapper {
+  margin-top: 20px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 20px;
+}
+.header-content .swiper .btn-swiper {
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: rgba(139, 139, 139, 0.3);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.header-content .swiper .btn-swiper.btn-swiper-next::before {
+  content: "\f105";
+  font-size: 25px;
+  color: white;
+  font-weight: 900;
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+}
+.header-content .swiper .btn-swiper.btn-swiper-prev::before {
+  content: "\f104";
+  font-size: 25px;
+  color: white;
+  font-weight: 900;
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+}
+.header-content.header-content__mt {
+  margin-top: 50px;
+}
+
 .title {
   color: rgb(255, 191, 0);
   font-size: 40px;
   max-width: 500px;
   text-wrap: balance;
-}
-.title.title_mt {
-  margin-top: 50px;
 }
 
 .benefits {
@@ -305,9 +374,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+  margin-top: auto;
 }
 .conditions.conditions_mt {
-  margin-top: 60px;
+  margin-top: 140px;
 }
 .conditions .conditions__item {
   -webkit-box-flex: 1;
