--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
   min-height: 100vh;
   background-position: center;
   background-size: cover;
-  background-image: url("../../img/excavator.jpg");
+  background-image: url("../../img/excavator-dark.jpg");
   padding-bottom: 10px;
 }
 
@@ -214,15 +214,15 @@ body {
   border-radius: 10px;
   width: 100%;
   height: 100%;
-  background-image: url("../../img/excavator-african.jpg");
+  background-image: url("../../img/excavator-african-dark.jpg");
   background-position: center;
   background-size: cover;
 }
 .header-content .swiper .swiper-wrapper .swiper-slide .slide-content.slide-content-2 {
-  background-image: url("../../img/worker.jpg");
+  background-image: url("../../img/worker-dark.jpg");
 }
 .header-content .swiper .swiper-wrapper .swiper-slide .slide-content.slide-content-3 {
-  background-image: url("../../img/excavator.jpg");
+  background-image: url("../../img/excavator-dark.jpg");
 }
 .header-content .swiper .swiper-btn-wrapper {
   margin-top: 20px;
