--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -427,3 +427,103 @@ body{
         }
     }
 }
+
+// секция с услугами
+
+.service-grid{
+    display: grid;
+    grid-template-columns: 80px 1fr;
+    column-gap: 100px;
+    margin-bottom: 1000px;
+    .service-grid__path{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .service-grid__circle{
+            width: 80px;
+            height: 80px;
+            border: 4px solid rgb(197, 197, 197);
+            border-radius: 50%;
+            transition: all .3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            &::before{
+                content: '\f2ed';
+                font-size: 40px;
+                color: rgb(197, 197, 197);
+                font-weight: 900;
+                font-family: $awesome-font;
+                transition: all .3s ease;
+            }
+            &.service-grid__circle_act{
+                background-color: $main-bg;
+                border: 2px solid $main-bg;
+                animation: circle-anim .5s ease 2;
+                @keyframes circle-anim {
+                    0%,100%{
+                        transform: scale(1);
+                    }
+                    50%{
+                        transform: scale(1.1);
+                    }
+                }
+            }
+            &.service-grid__circle_act::before{
+                color: white;
+            }
+            &.service-grid__circle-2::before{
+                content: '\f0d1';
+            }
+            &.service-grid__circle-3::before{
+                content: '\f4de';
+            }
+            &.service-grid__circle-4::before{
+                content: '\e29c';
+            }
+            &.service-grid__circle-5::before{
+                content: '\f043';
+            }
+            &.service-grid__circle-6::before{
+                content: '\f11e';
+            }
+        }
+        .service-grid__line{
+            width: 4px;
+            height: calc(100% - 80px);
+            background-color: rgb(197, 197, 197);
+            position: relative;
+            overflow: hidden;
+            .service-grid__subline{
+                position: absolute;
+                top:0px;
+                width: 100%;
+                height: 0;
+                background-color: $main-bg;
+            }
+        }
+    }
+    .service-grid__content{
+        .service-grid__header{
+            display: inline-block;
+            margin: 40px 0;
+                .service-grid__title{
+                    font-size: 36px;
+                    text-align: start;
+                    text-wrap: balance;
+                }
+                .service-grid__subtitle{
+                    text-align: start;
+                    color: $main-color;
+                    font-weight: 500;
+                    font-size: 20px;
+                }
+        }
+        .service-grid__text{
+            margin-bottom: 10px;
+            font-weight: 500;
+            font-size: 18px;
+        }
+    }
+}
