--- a/css/style.css
+++ b/css/style.css
@@ -554,3 +554,133 @@ body {
   margin-top: 5px;
   margin-bottom: 30px;
 }
+
+.service-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 80px 100px 1fr;
+  grid-template-columns: 80px 1fr;
+  -webkit-column-gap: 100px;
+     -moz-column-gap: 100px;
+          column-gap: 100px;
+  margin-bottom: 1000px;
+}
+.service-grid .service-grid__path {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.service-grid .service-grid__path .service-grid__circle {
+  width: 80px;
+  height: 80px;
+  border: 4px solid rgb(197, 197, 197);
+  border-radius: 50%;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.service-grid .service-grid__path .service-grid__circle::before {
+  content: "\f2ed";
+  font-size: 40px;
+  color: rgb(197, 197, 197);
+  font-weight: 900;
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.service-grid .service-grid__path .service-grid__circle.service-grid__circle_act {
+  background-color: rgb(212, 159, 0);
+  border: 2px solid rgb(212, 159, 0);
+  -webkit-animation: circle-anim 0.5s ease 2;
+          animation: circle-anim 0.5s ease 2;
+}
+@-webkit-keyframes circle-anim {
+  0%, 100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+}
+@keyframes circle-anim {
+  0%, 100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+}
+.service-grid .service-grid__path .service-grid__circle.service-grid__circle_act::before {
+  color: white;
+}
+.service-grid .service-grid__path .service-grid__circle.service-grid__circle-2::before {
+  content: "\f0d1";
+}
+.service-grid .service-grid__path .service-grid__circle.service-grid__circle-3::before {
+  content: "\f4de";
+}
+.service-grid .service-grid__path .service-grid__circle.service-grid__circle-4::before {
+  content: "\e29c";
+}
+.service-grid .service-grid__path .service-grid__circle.service-grid__circle-5::before {
+  content: "\f043";
+}
+.service-grid .service-grid__path .service-grid__circle.service-grid__circle-6::before {
+  content: "\f11e";
+}
+.service-grid .service-grid__path .service-grid__line {
+  width: 4px;
+  height: calc(100% - 80px);
+  background-color: rgb(197, 197, 197);
+  position: relative;
+  overflow: hidden;
+}
+.service-grid .service-grid__path .service-grid__line .service-grid__subline {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 0;
+  background-color: rgb(212, 159, 0);
+}
+.service-grid .service-grid__content .service-grid__header {
+  display: inline-block;
+  margin: 40px 0;
+}
+.service-grid .service-grid__content .service-grid__header .service-grid__title {
+  font-size: 36px;
+  text-align: start;
+  text-wrap: balance;
+}
+.service-grid .service-grid__content .service-grid__header .service-grid__subtitle {
+  text-align: start;
+  color: rgb(255, 191, 0);
+  font-weight: 500;
+  font-size: 20px;
+}
+.service-grid .service-grid__content .service-grid__text {
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 18px;
+}
