--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -23,6 +23,9 @@ body{
     padding: 0 15px;
     margin: 0 auto;
 }
+.container_sm{
+    max-width: 1000px;
+}
 
 .header{
     min-height: 100vh;
@@ -533,7 +536,6 @@ body{
     display: grid;
     grid-template-columns:  3fr auto 3fr auto 3fr;
     grid-template-rows: auto auto auto;
-    margin-bottom: 1000px;
     gap: 20px;
     .plan-grid__step{
         border-radius: 10px;
@@ -733,6 +735,49 @@ body{
             .plan-grid__line{
                 transform: rotate(90deg) !important;
             }
+        }
+    }
+}
+
+// Секция с обратной связью
+
+.wrap-feedback{
+    margin: 100px 0;
+    width: 100%;
+    display: flex;
+    border-radius: 10px;
+    .wrap-feedback__content{
+        flex: 1 1 50%;
+        display: flex;
+        flex-direction: column;
+        .wrap-feedback__title{
+            font-size: 30px;
+            max-width: 500px;
+            text-wrap: balance;
+            font-weight: 500;
+            &.wrap-feedback__title-2{
+                margin-top: 10px;
+            }
+        }
+        .wrap-feedback__text{
+            margin-top: 20px;
+            font-size: 18px;
+        }
+        .wrap-feedback__btn{
+            margin-top: auto;
+            margin-right: auto;
+        }
+    }
+    .wrap-feedback__img{
+        flex: 0 1 400px;
+        height: 400px;
+        border-radius: 10px;
+        overflow: hidden;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
         }
     }
 }
