--- a/css/style.css
+++ b/css/style.css
@@ -1003,8 +1003,16 @@ body {
             transform: rotate(90deg) !important;
   }
 }
-.wrap-feedback {
+.feedback-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 7.5fr 20px 4.5fr;
+  grid-template-columns: 7.5fr 4.5fr;
+  gap: 20px;
   margin: 100px 0;
+}
+
+.wrap-feedback {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1055,4 +1063,74 @@ body {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+}
+
+.accordion {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.accordion .accordion__item {
+  width: 100%;
+  background-color: gainsboro;
+  border-radius: 10px;
+  height: auto;
+}
+.accordion .accordion__item .accordion__head {
+  padding: 20px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+.accordion .accordion__item .accordion__head.accordion__head_act .accordion__icon::before {
+  content: "\f078";
+}
+.accordion .accordion__item .accordion__head .accordion__title {
+  font-size: 19px;
+  font-weight: 400;
+}
+.accordion .accordion__item .accordion__head .accordion__icon::before {
+  content: "\f054";
+  font-size: 25px;
+  color: black;
+  font-weight: 900;
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+}
+.accordion .accordion__item .accordion__body {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 0fr;
+  grid-template-rows: 0fr;
+  -webkit-transition: grid-template-rows 0.3s ease;
+  transition: grid-template-rows 0.3s ease;
+  transition: grid-template-rows 0.3s ease, -ms-grid-rows 0.3s ease;
+  overflow: hidden;
+}
+.accordion .accordion__item .accordion__body.accordion__body_act {
+  -ms-grid-rows: 1fr;
+  grid-template-rows: 1fr;
+}
+.accordion .accordion__item .accordion__body.accordion__body_act .accordion__auto-height {
+  height: auto;
+}
+.accordion .accordion__item .accordion__body .accordion__auto-height {
+  min-height: 0;
+}
+.accordion .accordion__item .accordion__body .accordion__auto-height .accordion__wrapper {
+  padding: 0 15px 15px 15px;
+}
+.accordion .accordion__item .accordion__body .accordion__auto-height .accordion__wrapper p {
+  margin-top: 5px;
 }
